compiler/testData/bytecodeVersion/obsoleteInlineSuspend/output.txt
compiler/testData/bytecodeVersion/obsoleteInlineSuspend/B.kt:4:5: error: cannot inline suspend function built with compiler version less than 1.1.4/1.2-M1
    foo()
    ^
COMPILATION_ERROR
